--- a/arista/dmac/evpn-vxlan-l3gw/evl3gw.topology.yaml
+++ b/arista/dmac/evpn-vxlan-l3gw/evl3gw.topology.yaml
@@ -3,9 +3,11 @@ prefix: ""
 
 topology:
   kinds:
-    ceos:
+    arista_ceos:
       #startup-config: ../startup_config/ceos.cfg.tpl
       image: ceos:4.34.3.1M
+      env:
+        CLAB_MGMT_VRF: MGMT
       exec:
       - sleep 10
       - FastCli -p 15 -c 'security pki key generate rsa 2048 eAPI.key'
@@ -15,37 +17,37 @@ topology:
 
   nodes:
     s1:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.121
       aliases:
         - s1
     s2:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.122
       aliases:
         - s2
     l1:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.61
       aliases:
         - l1
     l2:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.62
       aliases:
         - l2
     l3:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.63
       aliases:
         - l3
     l4:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.64
       aliases:
         - l4
     l5:
-      kind: ceos
+      kind: arista_ceos
       mgmt-ipv4: 172.100.100.65
       aliases:
         - l5
@@ -98,12 +100,18 @@ topology:
     - endpoints: ["l3:eth2", "s2:eth3"]
     - endpoints: ["l4:eth2", "s2:eth4"]
     - endpoints: ["l5:eth2", "s2:eth5"]
+    # Leaces to leaves
+    - endpoints: ["l1:eth5", "l2:eth6"]
+    - endpoints: ["l2:eth5", "l3:eth6"]
+    - endpoints: ["l3:eth5", "l4:eth6"]
+    - endpoints: ["l4:eth5", "l5:eth6"]
     # Leaves to Hosts
-    - endpoints: ["h1:eth1", "l1:eth6"]
-    - endpoints: ["h2:eth1", "l2:eth6"]
-    - endpoints: ["h3:eth1", "l3:eth6"]
-    - endpoints: ["h4:eth1", "l4:eth6"]
-    - endpoints: ["h5:eth1", "l5:eth6"]
+    - endpoints: ["h1:eth1", "l1:eth4"]
+    - endpoints: ["h1:eth2", "l2:eth4"]
+    - endpoints: ["h2:eth1", "l3:eth4"]
+    - endpoints: ["h2:eth2", "l4:eth4"]
+    - endpoints: ["h3:eth1", "l5:eth4"]
+    
 
 mgmt:
   network: ceos_clab                
