--- a/arista/dmac/evpn-vxlan-l3gw/evl3gw.topology.yaml
+++ b/arista/dmac/evpn-vxlan-l3gw/evl3gw.topology.yaml
@@ -100,17 +100,21 @@ topology:
     - endpoints: ["l3:eth2", "s2:eth3"]
     - endpoints: ["l4:eth2", "s2:eth4"]
     - endpoints: ["l5:eth2", "s2:eth5"]
-    # Leaces to leaves
-    - endpoints: ["l1:eth5", "l2:eth6"]
-    - endpoints: ["l2:eth5", "l3:eth6"]
-    - endpoints: ["l3:eth5", "l4:eth6"]
-    - endpoints: ["l4:eth5", "l5:eth6"]
-    # Leaves to Hosts
-    - endpoints: ["h1:eth1", "l1:eth4"]
-    - endpoints: ["h1:eth2", "l2:eth4"]
-    - endpoints: ["h2:eth1", "l3:eth4"]
-    - endpoints: ["h2:eth2", "l4:eth4"]
-    - endpoints: ["h3:eth1", "l5:eth4"]
+    # Hosts to leaves
+    ## Host 1
+    - endpoints: ["h1:eth1", "l1:eth3"]
+    - endpoints: ["h1:eth2", "l2:eth3"]
+
+    - endpoints: ["h2:eth1", "l1:eth4"]
+    - endpoints: ["h2:eth2", "l2:eth4"]
+    
+    - endpoints: ["h3:eth1", "l3:eth3"]
+    - endpoints: ["h3:eth2", "l4:eth3"]
+    
+    - endpoints: ["h4:eth1", "l3:eth4"]
+    - endpoints: ["h4:eth2", "l4:eth4"]
+    
+    - endpoints: ["h5:eth1", "l5:eth3"]
     
 
 mgmt:
