--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pre-commit>=4.5.1",
     "ruff>=0.14.10",
     "yamllint>=1.37.1",
     "dmac-clab",
     "basedpyright>=1.36.1",
+    "prek>=0.2.22",
 ]
 
 # When you try to install this project, don't look for a setup.py. Use the Hatchling engine to read my pyproject.toml and figure out what to do."
