--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "nornir-rich>=0.2.0",
     "nornir-utils>=0.2.0",
     "pyavd[ansible]>=5.7.2",
+    "pydantic-settings>=2.12.0",
 ]
 
 [dependency-groups]
