--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,6 @@ reportMissingTypeStubs = false
 [lint.isort]
 # Tells Ruff that 'py_netauto' is your local project, not a library like Nornir
 known-first-party = ["py_netauto"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
