Adding leaves Jinja Template

--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/hosts.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/hosts.yml
@@ -6,6 +6,7 @@ l1:
     hostname: 172.100.100.61
     groups:
         - leaf_group
+        - fabric
 l2:
     username: admin
     password: admin
@@ -13,6 +14,7 @@ l2:
     hostname: 172.100.100.62
     groups:
         - leaf_group
+        - fabric
 l3:
     username: admin
     password: admin
@@ -20,6 +22,7 @@ l3:
     hostname: 172.100.100.63
     groups:
         - leaf_group
+        - fabric
 l4:
     username: admin
     password: admin
@@ -27,6 +30,7 @@ l4:
     hostname: 172.100.100.64
     groups:
         - leaf_group
+        - fabric
 l5:
     username: admin
     password: admin
@@ -34,6 +38,7 @@ l5:
     hostname: 172.100.100.65
     groups:
         - leaf_group
+        - fabric
 s1:
     username: admin
     password: admin
@@ -41,6 +46,7 @@ s1:
     hostname: 172.100.100.121
     groups:
         - spine_group
+        - fabric
 s2:
     username: admin
     password: admin
@@ -48,6 +54,7 @@ s2:
     hostname: 172.100.100.122
     groups:
         - spine_group
+        - fabric
 h1:
     username:
     password:
