--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/groups.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/groups.yml
@@ -8,3 +8,57 @@ spine_group:
 host_group:
     data:
         role: host
+fabric:
+    data:
+        ecmp_maximum_paths: 4
+        bgp_maximum_routes: 12000
+        asns:
+            spines: 64600
+            l1: 65001
+            l2: 65002
+            l3: 65003
+            l4: 65004
+            l5: 65005
+        lo0_ips: # Also Router IDs
+            s1: "10.255.0.1/32"
+            s2: "10.255.0.2/32"
+            l1: "10.255.0.11/32"
+            l2: "10.255.0.12/32"
+            l3: "10.255.0.13/32"
+            l4: "10.255.0.14/32"
+            l5: "10.255.0.15/32"
+        lo1_ips: # Also VXLAN Source Tunnel IP
+            l1: "10.255.1.11/32"
+            l2: "10.255.1.12/32"
+            l3: "10.255.1.13/32"
+            l4: "10.255.1.14/32"
+            l5: "10.255.1.15/32"
+        p2p_ips:
+            s1:
+                to_l1: "10.254.1.0/31" #Eth1
+                to_l2: "10.254.1.2/31" #Eth2
+                to_l3: "10.254.1.4/31" #Eth3
+                to_l4: "10.254.1.6/31" #Eth4
+                to_l5: "10.254.1.8/31" #Eth5
+            s2:
+                to_l1: "10.254.2.0/31" #Eth1
+                to_l2: "10.254.2.2/31" #Eth2
+                to_l3: "10.254.2.4/31" #Eth3
+                to_l4: "10.254.2.6/31" #Eth4
+                to_l5: "10.254.2.8/31" #Eth5
+            l1:
+                to_s1: "10.254.1.1/31" #Eth1
+                to_s2: "10.254.2.1/31" #Eth2
+            l2:
+                to_s1: "10.254.1.3/31" #Eth1
+                to_s2: "10.254.2.3/31" #Eth2
+            l3:
+                to_s1: "10.254.1.5/31" #Eth1
+                to_s2: "10.254.2.5/31" #Eth2
+            l4:
+                to_s1: "10.254.1.7/31" #Eth1
+                to_s2: "10.254.2.7/31" #Eth2
+            l5:
+                to_s1: "10.254.1.9/31" #Eth1
+                to_s2: "10.254.2.9/31" #Eth2
+        
