Adding scrapli to get structured data from cisco-arista devices

--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/groups.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/groups.yml
@@ -9,7 +9,14 @@ host_group:
     data:
         role: host
 fabric:
+    connection_options:
+        scrapli:
+            platform: arista_eos
+            port: 22
+            extras:
+                auth_strict_key: False
     data:
+        platform: arista_eos # Used by scrapli (fallback)
         ecmp_maximum_paths: 4
         bgp_maximum_routes: 12000
         asns:
