--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "nornir-jinja2>=0.2.0",
     "nornir-napalm>=0.5.0",
     "nornir-rich>=0.2.0",
+    "nornir-scrapli>=2025.1.30",
     "nornir-utils>=0.2.0",
     "pyavd[ansible]>=5.7.2",
     "pydantic-settings>=2.12.0",
