--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/defaults.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/defaults.yml
@@ -1,6 +1,7 @@
 ---
+username: "admin"
+#password: "admin" # Can be added in the .env file
 data:
-    username: "admin"
     dns:
         - 1.1.1.1
         - 9.9.9.9
