Updating underlay configs ready

--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/l2.cfg
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/l2.cfg
@@ -2,3 +2,120 @@
 hostname l2
 no enable password
 no aaa root
+
+! Used for internal VLANs on routed ports. 
+vlan internal order ascending range 1000 1200
+
+! Different agents for different routing protocols (ArBGP). 
+service routing protocols model multi-agent
+
+! Split 40G interface into 4 x 10G
+transceiver qsfp default-mode 4x10G
+
+! USERS
+username admin privilege 15 role network-admin secret 0 admin
+
+! VRF AND SERVICES
+vrf instance MGMT
+
+! GNMI
+management api gnmi
+   transport grpc default
+      vrf MGMT
+
+! NETCONF
+management api netconf
+   transport ssh default
+      vrf MGMT
+
+! eAPI
+management api http-commands
+    protocol https
+    no shutdown
+   !
+   vrf MGMT
+      no shutdown
+
+! IP ROUTING
+ip routing
+no ip routing vrf MGMT
+ip route vrf MGMT 0.0.0.0/0 172.100.100.1
+ipv6 route vrf MGMT ::/0 2001:172:100:100::1
+
+! MGMT INTERFACE
+interface Management0
+   vrf MGMT
+   ip address 172.100.100.62/24
+
+! LOOPBACK INTERFACES
+interface Loopback0
+   description VTEP_RID_L2
+   no shutdown
+   ip address 10.255.0.12/32
+!
+interface Loopback1
+   description VXLAN_TUNNEL_SOURCE_L2
+   no shutdown
+   ip address 10.255.1.12/32
+   
+! LEAF-SPINE-INTERFACES
+Interface Ethernet 1
+   description P2P_S1_Eth2
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.3/31
+
+Interface Ethernet 2
+   description P2P_S2_Eth2
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.2.3/31
+
+! LEAF-ONLY-CONFIG
+! Each Leaf should become a root STP bridge in its own segment to avoid someone else plugin a switch in the access ports and causing that switch to be elected as root or causing a L2 loop.
+
+spanning-tree mode mstp
+spanning-tree mst 0 priority 4096
+
+! UNDERLAY
+! The aim here is to create BGP Peerings via the physical interfaces between the Leaves and the Spines.
+! After the peering has been created, we will advertise the Lo0 via eBGP to be used for peering in the OVerlay (EVPN - Control Plane) and L1 to be used as the VTEP Source IP (VXLAN - Data Plane)
+
+! Define the Loopbacks we want to advertise
+ip prefix-list PL-LOOPBACKS seq 10 permit  10.255.0.12/32
+ip prefix-list PL-LOOPBACKS seq 20 permit  10.255.1.12/32
+
+! Create a Route Map
+route-map RM-UNDERLAY-ADVERTISE permit 10
+   match ip address prefix-list PL-LOOPBACKS 
+
+router bgp 65002
+   router-id 10.255.0.12
+   ! You will not only exchange IPv4 routes but also EVPN routes
+   no bgp default ipv4-unicast
+   ! ECMP load-balancing across 4 paths if available.
+   maximum-paths 64
+   redistribute connected route-map RM-UNDERLAY-ADVERTISE
+
+   neighbor IPV4-SPINES peer group
+   neighbor IPV4-SPINES password 0 dmac
+   neighbor IPV4-SPINES send-community
+   neighbor IPV4-SPINES maximum-routes 12000
+   neighbor IPV4-SPINES remote-as 64600
+   neighbor IPV4-SPINES route-map RM-UNDERLAY-ADVERTISE out
+
+   ! S1 BGP Neighbor
+   neighbor 10.254.1.2 description S1_ETH2
+   neighbor 10.254.1.2 peer group IPV4-SPINES
+   neighbor 10.254.1.2 remote-as 64600
+
+   ! S2 BGP Neighbor  
+   neighbor 10.254.2.2 description S2_ETH2
+   neighbor 10.254.2.2 peer group IPV4-SPINES
+   neighbor 10.254.2.2 remote-as 64600
+
+   ! IPv4 Address Family
+   address-family ipv4
+      neighbor IPV4-SPINES activate
