--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/s1.cfg
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/s1.cfg
@@ -2,3 +2,141 @@
 hostname s1
 no enable password
 no aaa root
+
+! Used for internal VLANs on routed ports. 
+vlan internal order ascending range 1000 1200
+
+! Different agents for different routing protocols (ArBGP). 
+service routing protocols model multi-agent
+
+! Split 40G interface into 4 x 10G
+transceiver qsfp default-mode 4x10G
+
+! USERS
+username admin privilege 15 role network-admin secret 0 admin
+
+! VRF AND SERVICES
+vrf instance MGMT
+
+! GNMI
+management api gnmi
+   transport grpc default
+      vrf MGMT
+
+! NETCONF
+management api netconf
+   transport ssh default
+      vrf MGMT
+
+! eAPI
+management api http-commands
+    protocol https
+    no shutdown
+   !
+   vrf MGMT
+      no shutdown
+
+! IP ROUTING
+ip routing
+no ip routing vrf MGMT
+ip route vrf MGMT 0.0.0.0/0 172.100.100.1
+ipv6 route vrf MGMT ::/0 2001:172:100:100::1
+
+! MGMT INTERFACE
+interface Management0
+   vrf MGMT
+   ip address 172.100.100.121/24
+
+! LOOPBACK INTERFACES
+interface Loopback0
+   description VTEP_RID_S1
+   no shutdown
+   ip address 10.255.0.1/32
+!
+
+! LEAF-SPINE-INTERFACES
+Interface Ethernet 1
+   description P2P_L1_Eth1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.0/31
+
+Interface Ethernet 2
+   description P2P_L2_Eth1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.2/31
+   
+Interface Ethernet 3
+   description P2P_L3_Eth1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.4/31
+   
+Interface Ethernet 4
+   description P2P_L4_Eth1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.6/31
+   
+Interface Ethernet 5
+   description P2P_L5_Eth1
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.254.1.8/31
+
+! SPINE-ONLY-CONFIG
+! Spines act as a pure Layer 3 device. They don't need SPT
+spanning-tree mode none
+
+! UNDERLAY
+! The aim here is to create BGP Peerings via the physical interfaces between the Leaves and the Spines.
+! After the peering has been created, we will advertise the Lo0 via eBGP to be used for peering in the OVerlay (EVPN - Control Plane) and L1 to be used as the VTEP Source IP (VXLAN - Data Plane)
+
+! Define the Loopbacks we want to advertise
+ip prefix-list PL-LOOPBACKS seq 10 permit 10.255.0.1/32
+
+! Create a Route Map
+route-map RM-UNDERLAY-ADVERTISE permit 10
+   match ip address prefix-list PL-LOOPBACKS 
+
+router bgp 64600
+   router-id 10.255.0.1
+   ! You will not only exchange IPv4 routes but also EVPN routes
+   no bgp default ipv4-unicast
+   ! ECMP load-balancing across 4 paths if available.
+   maximum-paths 64
+   redistribute connected route-map RM-UNDERLAY-ADVERTISE
+
+   neighbor IPV4-LEAVES peer group
+   neighbor IPV4-LEAVES password 0 dmac
+   neighbor IPV4-LEAVES send-community
+   neighbor IPV4-LEAVES maximum-routes 12000
+
+   neighbor 10.254.1.1 description L1_ETH1
+   neighbor 10.254.1.1 peer group IPV4-LEAVES
+   neighbor 10.254.1.1 remote-as 65001
+   
+   neighbor 10.254.1.3 description L2_ETH1
+   neighbor 10.254.1.3 peer group IPV4-LEAVES
+   neighbor 10.254.1.3 remote-as 65002
+
+   neighbor 10.254.1.5 description L3_ETH1
+   neighbor 10.254.1.5 peer group IPV4-LEAVES
+   neighbor 10.254.1.5 remote-as 65003
+
+   neighbor 10.254.1.7 description L4_ETH1
+   neighbor 10.254.1.7 peer group IPV4-LEAVES
+   neighbor 10.254.1.7 remote-as 65004
+
+   neighbor 10.254.1.9 description L5_ETH1
+   neighbor 10.254.1.9 peer group IPV4-LEAVES
+   neighbor 10.254.1.9 remote-as 65005
+
+address-family ipv4
+      neighbor IPV4-LEAVES activate
