--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/hosts.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/hosts.yml
@@ -4,36 +4,50 @@ l1:
     groups:
         - leaf_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::61
 l2:
     hostname: 172.100.100.62
     groups:
         - leaf_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::62
 l3:
     hostname: 172.100.100.63
     groups:
         - leaf_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::63
 l4:
     hostname: 172.100.100.64
     groups:
         - leaf_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::64
 l5:
     hostname: 172.100.100.65
     groups:
         - leaf_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::65
 s1:
     hostname: 172.100.100.121
     groups:
         - spine_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::121
 s2:
     hostname: 172.100.100.122
     groups:
         - spine_group
         - fabric
+    data:
+        ipv6_address: 2001:172:100:100::122
 h1:
     username:
     password:
@@ -41,6 +55,8 @@ h1:
     hostname: 172.100.100.21
     groups:
         - host_group
+    data:
+        ipv6_address: 2001:172:100:100::21
 h2:
     username:
     password:
@@ -48,6 +64,8 @@ h2:
     hostname: 172.100.100.22
     groups:
         - host_group
+    data:
+        ipv6_address: 2001:172:100:100::22
 h3:
     username:
     password:
@@ -55,6 +73,8 @@ h3:
     hostname: 172.100.100.23
     groups:
         - host_group
+    data:
+        ipv6_address: 2001:172:100:100::23
 h4:
     username:
     password:
@@ -62,6 +82,8 @@ h4:
     hostname: 172.100.100.24
     groups:
         - host_group
+    data:
+        ipv6_address: 2001:172:100:100::24
 h5:
     username:
     password:
@@ -69,3 +91,5 @@ h5:
     hostname: 172.100.100.25
     groups:
         - host_group
+    data:
+        ipv6_address: 2001:172:100:100::25
