--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/l5.cfg
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/l5.cfg
@@ -46,6 +46,7 @@ ipv6 route vrf MGMT ::/0 2001:172:100:100::1
 interface Management0
    vrf MGMT
    ip address 172.100.100.65/24
+   ipv6 address 2001:172:100:100::65/80
 
 ! LOOPBACK INTERFACES
 interface Loopback0
