Adding basic Pyadantic models to validate our data model

--- a/clab/arista/dmac/evpn-vxlan-l3gw/datamodels/datamodel-lean.yml
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/datamodels/datamodel-lean.yml
@@ -1,22 +1,32 @@
 ---
 schema_version: "1.0.1"
-schema_description: "Full data model not including computed fields that will be passed into Pydantic",
+schema_description: "Full data model not including computed fields that will be passed into Pydantic"
 fabric_name: ceos_clab_clos
-ip_allocation_intent:
-  p2p_supernet: 10.254.0.0/16
+
+mgmt_vrf: MGMT
+
+reserved_supernets:
+  p2p_pool: 10.254.0.0/16
   loopback0_pool: 10.255.0.0/24
   loopback1_pool: 10.255.1.0/24
-  management:
+  management_pool:
     ipv4_subnet: 172.100.100.0/24
     ipv6_subnet: 2001:172:100:100::/64
-    vrf: MGMT
-  spine_asn: 64600
+
+fabric_asns:
+  spines: 64600
+  l1: 65001
+  l2: 65002
+  l3: 65003
+  l4: 65004
+  l5: 65005
 
 topology:
   spines:
     - hostname: s1
+      asn: 64600
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.121/24}
+        - {name: Management0, ipv4: 172.100.100.121/24, ipv6: 2001:172:100:100::121/64}
         - {name: Loopback0, ipv4: 10.255.0.1/32}
         - {name: Ethernet1, ipv4: 10.254.1.0/31, remote_device: l1}
         - {name: Ethernet2, ipv4: 10.254.1.2/31, remote_device: l2}
@@ -24,8 +34,9 @@ topology:
         - {name: Ethernet4, ipv4: 10.254.1.6/31, remote_device: l4}
         - {name: Ethernet5, ipv4: 10.254.1.8/31, remote_device: l5}
     - hostname: s2
+      asn: 64600
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.122/24}
+        - {name: Management0, ipv4: 172.100.100.122/24, ipv6: 2001:172:100:100::122/64}
         - {name: Loopback0, ipv4: 10.255.0.2/32}
         - {name: Ethernet1, ipv4: 10.254.2.0/31, remote_device: l1}
         - {name: Ethernet2, ipv4: 10.254.2.2/31, remote_device: l2}
@@ -37,7 +48,7 @@ topology:
     - hostname: l1
       asn: 65001
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.61/24}
+        - {name: Management0, ipv4: 172.100.100.61/24, ipv6: 2001:172:100:100::61/64}
         - {name: Loopback0, ipv4: 10.255.0.11/32}
         - {name: Loopback1, ipv4: 10.255.1.11/32}
         - {name: Ethernet1, ipv4: 10.254.1.1/31, remote_device: s1}
@@ -45,7 +56,7 @@ topology:
     - hostname: l2
       asn: 65002
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.62/24}
+        - {name: Management0, ipv4: 172.100.100.62/24, ipv6: 2001:172:100:100::62/64}
         - {name: Loopback0, ipv4: 10.255.0.12/32}
         - {name: Loopback1, ipv4: 10.255.1.12/32}
         - {name: Ethernet1, ipv4: 10.254.1.3/31, remote_device: s1}
@@ -53,7 +64,7 @@ topology:
     - hostname: l3
       asn: 65003
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.63/24}
+        - {name: Management0, ipv4: 172.100.100.63/24, ipv6: 2001:172:100:100::63/64}
         - {name: Loopback0, ipv4: 10.255.0.13/32}
         - {name: Loopback1, ipv4: 10.255.1.13/32}
         - {name: Ethernet1, ipv4: 10.254.1.5/31, remote_device: s1}
@@ -61,7 +72,7 @@ topology:
     - hostname: l4
       asn: 65004
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.64/24}
+        - {name: Management0, ipv4: 172.100.100.64/24, ipv6: 2001:172:100:100::64/64}
         - {name: Loopback0, ipv4: 10.255.0.14/32}
         - {name: Loopback1, ipv4: 10.255.1.14/32}
         - {name: Ethernet1, ipv4: 10.254.1.7/31, remote_device: s1}
@@ -69,7 +80,7 @@ topology:
     - hostname: l5
       asn: 65005
       interfaces:
-        - {name: Management0, ipv4: 172.100.100.65/24}
+        - {name: Management0, ipv4: 172.100.100.65/24, ipv6: 2001:172:100:100::65/64}
         - {name: Loopback0, ipv4: 10.255.0.15/32}
         - {name: Loopback1, ipv4: 10.255.1.15/32}
         - {name: Ethernet1, ipv4: 10.254.1.9/31, remote_device: s1}
